<?xml version="1.0"?>
<package format="2">
  <name>abot_description</name>
  <version>1.2.6</version>
  <description>
    3D models of the abot for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/abot_description</url>
  <url type="emanual">http://abot.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/abot</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/abot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
